--- a/project/user-details.html
+++ b/project/user-details.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -20,27 +19,29 @@
 <body>
 
 <script>
+
+<!--    Info user   Display all, without exception, information about the clicked user object-->
     let urlSearch = new URLSearchParams(window.location.search);
     let userId = urlSearch.get('id');
     fetch(`https://jsonplaceholder.typicode.com/users/${userId}`)
         .then(response => response.json())
         .then(user => {
-            let userBlok = document.createElement('div');
+            const userBlok = document.createElement('div');
             userBlok.classList.add('userBlok')
 
             function createPropertyElement(key, value) {
-                let propertyElement = document.createElement('p');
+                const propertyElement = document.createElement('p');
                 propertyElement.classList.add('propertyElement');
                 propertyElement.innerHTML = `${key}:`;
 
                 if (typeof value === 'object') {
-                    let objectElement = document.createElement('span');
+                    const objectElement = document.createElement('span');
                     objectElement.classList.add('objectElement');
                     objectElement.innerHTML = '<br>';
 
                     for (let objectKey in value) {
-                        let objectValue = value[objectKey];
-                        let objectProperty = createPropertyElement(objectKey, objectValue);
+                        const objectValue = value[objectKey];
+                        const objectProperty = createPropertyElement(objectKey, objectValue);
                         objectElement.appendChild(objectProperty);
                     }
 
@@ -56,19 +57,23 @@
             }
 
             for (let key in user) {
-                let value = user[key];
-                let propertyElement = createPropertyElement(key, value);
+                const value = user[key];
+                const propertyElement = createPropertyElement(key, value);
                 userBlok.appendChild(propertyElement);
             }
 
             document.body.appendChild(userBlok);
         });
+
+
+// shows all posts of the current user
+
     let bigButton = document.createElement('button');
     bigButton.textContent = 'post of current user';
     bigButton.classList.add('bigButton');
     bigButton.addEventListener('click', () => {
-        let urlSearch = new URLSearchParams(window.location.search);
-        let userId = urlSearch.get('id');
+        const urlSearch = new URLSearchParams(window.location.search);
+        const userId = urlSearch.get('id');
         let postDiv = document.querySelector('.postDiv');
         if (postDiv) {
             postDiv.remove();
@@ -79,10 +84,10 @@
                 postDiv = document.createElement('div');
                 postDiv.classList.add('postDiv');
                 posts.forEach(post => {
-                    let titleDiv = document.createElement('button');
+                    const titleDiv = document.createElement('button');
                     titleDiv.classList.add('titleDiv');
                     titleDiv.textContent = post.title;
-                    titleDiv.addEventListener('click', () =>{
+                    titleDiv.addEventListener('click', () => {
                         window.location.href = `post-details.html?id=${post.id}`;
 
                     })
