--- a/project/index.html
+++ b/project/index.html
@@ -14,9 +14,10 @@
 
     <title>Document</title>
 </head>
+<div class="BoxHtml">
 
 <h1 class="usersTop"> USERS </h1>
-
+</div>
 <body>
 <script src="main.js"></script>
 </body>
